scrollspy fix + larger parallax

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<script src="js/modernizr.custom.js"></script>
 	</head>
 	
-	<body data-spy="scroll" data-target=".navbar">
+	<body data-spy="scroll" data-offset="62" data-target=".navbar">
 		<nav class="navbar navbar-default navbar-fixed-top nav-fadein" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
@@ -42,6 +42,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="scrollto" href="#home">Hjem</a></li>
 						<li><a class="scrollto" href="#om-ysp">Om YSP</a></li>
+						<li><a class="scrollto" href="#fadder">Info for fadderskoler</a></li>
 						<li><a class="scrollto" href="#contact">Kontakt</a></li>
 					</ul>
 				</div> <!-- /.navbar-collapse -->
@@ -117,17 +118,71 @@
 				</div>
 			</div>
 			
-			<div class="fullbredde-seksjon">
-				<div class="parallax img-overlay3" style="background-image: url('bg.jpg')" data-stellar-background-ratio="0.2"></div>
+			<div class="fullbredde-seksjon_parralax">
+				<div class="parallax_2 img-overlay3" style="background-image: url('bg.jpg')" data-stellar-background-ratio="0.2"></div>
 				<div class="img-overlay-solid" style="background-color:rgba(60,62,71,0.5);"></div>
 			</div>
 		</section> <!-- .om-ysp -->
 		
 		<section id="fadder">
+			<div class="fullbredde-seksjon kill-top-padding">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 kill-top-margin text-center">
+							<h2 class="weight-800 uppercase">Info For Fadderskolen</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<h4 class="weight-700">idk tittel elns</h4>
+							<p>her er jo litt tekst, men nei. kanskje ikkje. nei. huff. sorry.</p>
+						</div>
+						<div class="col-md-6">
+							<h4 class="weight-700">enda en, berre ved siden av as</h4>
+							<p>fyf, e anakje ka e driv med. men d e no fortsatt noke</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<h4 class="weigth-700">åja, ja. nei altså</h4>
+							<p>kan ha så mange tekst ved siden av kvarande, eller under eller whatever. ganske customizable grid system, berre å si korsen dokke vil ha det eh.</p>
+						</div>
+						<div class="col-md-6">
+							<h4 class="weigth-700">også kanskje litt cat ipsum</h4>
+							<p>Pelt around the house and up and down stairs chasing phantoms jump off balcony, onto stranger's head and unwrap toilet paper, or stretch hide at bottom of staircase to trip human. Stand in front of the computer screen hack up furballs, but instantly break out into full speed gallop across the house for no reason sit by the fire. Under the bed. Meow all night having their mate disturbing sleeping humans jump off balcony, onto stranger's head.</p>
+						</div>
+					</div>
+				</div>
+			</div>	
+			
+			<div class="fullbredde-seksjon">
+				<div class="parallax img-overlay3" style="background-image: url('bg.jpg')" data-stellar-background-ratio="0.3"></div>
+					<div class="img-overlay-solid" style="background-color:rgba(60,62,71,0.5);"></div>
+				</div>
+			</div>
 		</section> <!-- .fadder -->
-		
-		<section id="kontakt">
-		</section> <!-- .kontakt -->
+
+<section id="contact">
+<div class="container">
+<div class="row" style="margin-bottom: 20px;">
+<div class="col-md-6 col-md-offset-3 text-center">
+
+<h1 class="weight-800 uppercase color-black">kontakt</h1>
+<h4 class="color-black weight-400">yay</h4>
+</div>
+</div>
+
+
+
+
+<div class="row">
+<div class="col-md-8 col-md-offset-2">
+<p>her må jeg implementere en kontaktskjema, eller bare ha kontaktinfo? kanskje droppe dinna seksjonen, og ha en footer med kontaktinformasjon. eller. nei. whatever.</p>
+</div>
+</div>
+
+
+</section>
 		
 		
 		<!-- jQuery Scripts -->
