--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta name="x-author" content="Eursoft Ltd.">
 		<title>Young Solidarity for Palestine</title>
 		<!-- Core Bootstrap CSS -->
 		<link rel="stylesheet" media="screen" href="css/bootstrap.css">
