--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 			</div>
     	</div>
     	
-		<nav class="navbar navbar-default navbar-fixed-top nav-fadein" role="navigation">
+		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
 					<i class="fa fa-bars fa-fw"></i>
 					</button>
-					<a class="navbar-brand weight-900" href="index.html#home"><img alt="" id="logo" src="logo-ysp.png" height="67"></a>
+					<a class="navbar-brand weight-900" href="index.html#home"><img alt="" id="logo" src="logo-ysp-nav.png" height="67"></a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="main-menu">
